# linggandawang

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  after-fill.yaml  build-release.ps1  build-simple.ps1  eslint.config.js  index.html  initial.yaml  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vite.demo.config.ts
.learnings/: ERRORS.md  LEARNINGS.md
deliverables/: linggandawang-demo.html  创作过程对话记录.md  创作过程证明材料.md  初赛报名帖.md  报名帖.md
deliverables/初赛帖图文/: 初赛帖.md
deliverables/打包教程/: 打包教程.md
demo/: 测试案例.md  演示脚本.md
docs/: PRD.md  QA报告.md  RISK-REGISTER.md  代码体检报告_2026-07-15.md  代码审查报告.md  后续开发项目计划.md  完整开发计划书.md  开发计划书.md  打包注意事项.md  执行计划_2026-07-08.md  智能化升级方案.md  架构设计.md  深度分析报告.md  用户意见反馈书.md  跨工具同步方案.md  部署手册.md  长期推进计划.md  隐私政策.md  需求拆解-M9.4-M11.md  项目介绍与演示指南.md  项目进度计划书.md
docs/reference/: llm-adapter.md  tauri-commands.md
scripts/: build-deliverables.cjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  resource.rc  rustc-wrapper.bat  rustc-wrapper.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_create_prompt_history.sql  0002_create_user_preferences.sql  0003_create_question_bank_cache.sql  0004_add_favorite_to_prompt_history.sql  0005_create_vector_store.sql
src-tauri/src/: lib.rs  main.rs  scanner.rs
src-tauri/src/commands/: api_key.rs  context.rs  image.rs  mod.rs  project.rs  requirement.rs  sidecar.rs  window.rs
task-user-feedback-deep-optimization/: P1.1-问题库扩展.md  P1.2-历史记录扩展.md  P1.3-P1.5-及其他改进.md  P1.4-首次引导遮罩.md  优化总结报告.md  优化计划书.md
(+109 files in other folders)
